src/components/overwriteEditor.css
/* Editor toolbar  */
.sun-editor .se-toolbar {
  outline: none !important;
  border: 1px solid #b1b1b1;
  position: sticky;
  top: 0;
  height: 10%;
  border-radius: 4px 4px 0px 0px;
}

/* Editor  container */
.sun-editor-editable {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  padding: 14px;
  flex: 1;

  color: black;
}
/* Editor container image */
.sun-editor-editable img {
  overflow: scroll;
}
.ͼ1 .cm-scroller {
  padding: 14px;
}

.ͼ1 {
  height: 100%;
}

.ͼ16 {
  background-color: white !important;
}

.sun-editor {
  border: none;
  height: 100%;
}

.sun-editor .se-wrapper-inner {
  min-height: 408px !important;

  height: 100%;
}
.sun-editor .se-container {
  height: 100%;
}
.sun-editor .se-wrapper {
  overflow: auto;
  height: 90%;
  overflow-x: hidden;
  border-left: 1px solid #b1b1b1;
  border-right: 1px solid #b1b1b1;
}

.sun-editor-editable p {
  margin: 0px !important;
}

.sun-editor .se-resizing-bar {
  position: fixed;
  top: 100%;
  z-index: 10;
  width: 100%;
  margin: auto;
  border: 1px solid #b1b1b1;
  border-radius: 0px 0px 4px 4px;
}
@media screen and (max-width: 1078px) {
  .sun-editor .se-toolbar {
    height: 19%;
  }
  .sun-editor .se-wrapper {
    height: 81%;
    overflow: auto;
  }
}
@media screen and (max-width: 792px) {
  .sun-editor .se-toolbar {
    height: 28%;
  }
  .sun-editor .se-wrapper {
    height: 72%;
    overflow: auto;
  }
}
@media screen and (max-width: 586px) {
  .sun-editor .se-toolbar {
    height: 36%;
  }
  .sun-editor .se-wrapper {
    height: 64%;
    overflow: auto;
  }
}
@media screen and (max-width: 306px) {
  .sun-editor .se-toolbar {
    height: 43%;
  }
  .sun-editor .se-wrapper {
    height: 58%;
    overflow: auto;
  }
}

